@@ -249,6 +249,19 @@
 					</transformationSets>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.16</version>
+				<configuration>
+				    <argLine>-Xms512m</argLine>
+				    <argLine>-Xmx1024m</argLine>
+				    <argLine>-XX:MaxPermSize=512m</argLine>
+				    <argLine>-XX:+CMSPermGenSweepingEnabled</argLine>
+				    <argLine>-XX:+CMSClassUnloadingEnabled</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	
